se agregaron las tres primeras secciones del contenido de la pagina

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Veterinaria</title>
 </head>
 <body>
+    <!-- Barre de navegacion principal -->
     <header>
         <nav>
             <img src="img/Veterinaria.png" alt="logo de la vetrerinaria">
@@ -21,5 +22,48 @@
             </ul>
         </nav>
     </header>
+<!-- Contenido principal -->
+    <main>
+        <!-- Primera seccion -->
+        <article>
+            <section>
+                <h1>Titulo principal para anunciar</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti corporis temporibus quis doloremque a id officia. Ad in quam impedit enim nulla illo necessitatibus nisi consequatur, temporibus harum odit tenetur!</p>
+                <button>Contactenos</button>
+                <button>Solicita un servicio</button>
+                <img src="https://picsum.photos/id/1025/600/400" alt="imagen de perro pug con cobija">
+            </section>
+        </article>
+        <!-- segunda seccion -->
+        <article>
+            <section>
+                <h1>Es una veterinaria que ama a los animales</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quae possimus cupiditate temporibus quidem architecto consectetur nobis magni delectus aliquid accusantium deserunt adipisci dignissimos, odit sapiente repudiandae quod perferendis fugiat.</p>
+                <button>Solicita un servicio</button>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ySgCU7z1E_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
+        </article>
+        <!-- Tercera seccion -->
+        <article>
+            <section>
+                <h1>Galeria</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae amet, quia excepturi tenetur veniam maxime molestiae, voluptatum ipsa fuga repellendus ut? Error molestiae amet asperiores sit maxime, dolores ratione eos!</p>
+                <div class="galeria">
+                    <img src="https://picsum.photos/id/237/600/400" alt="perro negro">
+                    <h2>veterinarios</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet reiciendis quibusdam odit asperiores sunt provident ea sed laboriosam necessitatibus sapiente, voluptate sint enim autem excepturi ab ut soluta cum molestiae?</p>
+                    <img src="https://picsum.photos/id/1020/600/400" alt="oso en la montaña">
+                    <h2>Vacunacion</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet reiciendis quibusdam odit asperiores sunt provident ea sed laboriosam necessitatibus sapiente, voluptate sint enim autem excepturi ab ut soluta cum molestiae?</p>
+                    <img src="https://picsum.photos/id/550/600/400" alt="mujer viendo el horizonte">
+                    <h2>plan dental</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet reiciendis quibusdam odit asperiores sunt provident ea sed laboriosam necessitatibus sapiente, voluptate sint enim autem excepturi ab ut soluta cum molestiae?</p>
+                </div>
+            </section>
+        </article>
+
+        
+    </main>
+
 </body>
 </html>
