Se agrego la cuarta y quinta seccion, en la tercera seccion se agruparon las imagenes en contenedores diferentes

--- a/index.html
+++ b/index.html
@@ -49,20 +49,60 @@
                 <h1>Galeria</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae amet, quia excepturi tenetur veniam maxime molestiae, voluptatum ipsa fuga repellendus ut? Error molestiae amet asperiores sit maxime, dolores ratione eos!</p>
                 <div class="galeria">
-                    <img src="https://picsum.photos/id/237/600/400" alt="perro negro">
-                    <h2>veterinarios</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet reiciendis quibusdam odit asperiores sunt provident ea sed laboriosam necessitatibus sapiente, voluptate sint enim autem excepturi ab ut soluta cum molestiae?</p>
-                    <img src="https://picsum.photos/id/1020/600/400" alt="oso en la montaña">
-                    <h2>Vacunacion</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet reiciendis quibusdam odit asperiores sunt provident ea sed laboriosam necessitatibus sapiente, voluptate sint enim autem excepturi ab ut soluta cum molestiae?</p>
-                    <img src="https://picsum.photos/id/550/600/400" alt="mujer viendo el horizonte">
-                    <h2>plan dental</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet reiciendis quibusdam odit asperiores sunt provident ea sed laboriosam necessitatibus sapiente, voluptate sint enim autem excepturi ab ut soluta cum molestiae?</p>
+                    <div class="img1">
+                        <img src="https://picsum.photos/id/237/600/400" alt="perro negro">
+                        <h2>veterinarios</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet reiciendis quibusdam odit asperiores sunt provident ea sed laboriosam necessitatibus sapiente, voluptate sint enim autem excepturi ab ut soluta cum molestiae?</p>
+                    </div>
+                    <div class="img2">
+                        <img src="https://picsum.photos/id/1020/600/400" alt="oso en la montaña">
+                        <h2>Vacunacion</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet reiciendis quibusdam odit asperiores sunt provident ea sed laboriosam necessitatibus sapiente, voluptate sint enim autem excepturi ab ut soluta cum molestiae?</p>
+                    </div>
+                    <div class="img3">
+                        <img src="https://picsum.photos/id/550/600/400" alt="mujer viendo el horizonte">
+                        <h2>plan dental</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet reiciendis quibusdam odit asperiores sunt provident ea sed laboriosam necessitatibus sapiente, voluptate sint enim autem excepturi ab ut soluta cum molestiae?</p>
+                    </div>
                 </div>
             </section>
         </article>
-
-        
+        <!-- cuerta seccion con textos alineados a la izquierda -->
+        <article>
+            <section>
+                <h1>Es una veterinaria que ama a los animales</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quae possimus cupiditate temporibus quidem architecto consectetur nobis magni delectus aliquid accusantium deserunt adipisci dignissimos, odit sapiente repudiandae quod perferendis fugiat.</p>
+                <button>Solicita un servicio</button>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ySgCU7z1E_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
+        </article>
+        <!-- quinta seccion -->
+        <article>
+            <section>
+                <h1>Precios</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla magni iusto doloribus omnis sit iure repudiandae neque dolorem, adipisci illo dolores libero, quae officia. Fuga sequi totam magnam nihil ab.</p>
+                <div class="precio">
+                    <div class="img1">
+                        <img src="https://picsum.photos/id/598/600/400" alt="barco en el mar">
+                        <p>$50</p>
+                        <p>$30</p>
+                        <button>Comprar</button>
+                    </div>
+                    <div class="img2">
+                        <img src="https://picsum.photos/id/642/600/400" alt="velas blancas de un barco">
+                        <p>$40</p>
+                        <p>$25</p>
+                        <button>Comprar</button>
+                    </div>
+                    <div class="img3">
+                        <img src="https://picsum.photos/id/211/600/400" alt="barco de mandera en el muelle">
+                        <p>$45</p>
+                        <p>$20</p>
+                        <button>Comprar</button>
+                    </div>
+                </div>
+            </section>
+        </article>
     </main>
 
 </body>
