Se termina la estructur Html de la pagina veterinaria

--- a/index.html
+++ b/index.html
@@ -178,6 +178,38 @@
             </section>
         </article>
     </main>
-
+    <!-- pie de pagina -->
+    <footer>
+        <div class="fcontenedor">
+            <section>
+                <h1>Acerca de Nosotros</h1>
+                <ul>
+                    <li>Historia</li>
+                    <li>El equipo</li>
+                    <li>Patrocinadores</li>
+                    <li>Terminos y condiciones</li>
+                    <li>Politca de privacidad</li>
+                </ul>
+            </section>
+            <section>
+                <h1>Servicios</h1>
+                <ul>
+                    <li>Como comprar</li>
+                    <li>Comprar producto</li>
+                    <li>Estado de compra</li>
+                    <li>Promociones</li>
+                    <li>Metodos de pago</li>
+                </ul>
+            </section>
+            <section>
+                <h1>
+                    Titulo
+                </h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto qui culpa sunt cum quidem temporibus non adipisci voluptate molestiae aut, architecto porro nisi modi tempore placeat magni commodi, consectetur illo.</p>
+                <input type="text">
+                <button>enviar</button>
+            </section>
+        </div>
+    </footer>
 </body>
 </html>
