se agrega normalize para normalizar los estilos del navegador y se termina la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -6,27 +6,32 @@
     <link rel="shortcut icon" href="img/Veterinaria.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Fuente Poppins meeium -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="normalize.css">
     <title>Veterinaria</title>
 </head>
 <body>
     <!-- Barre de navegacion principal -->
     <header>
         <nav>
-            <img src="img/Veterinaria.png" alt="logo de la vetrerinaria">
-            <p>Veterinaria yopal</p>
+            <img class="logo-nav" src="img/Veterinaria.png" alt="logo de la vetrerinaria">
+            <p class="nombre-empresa">Veterinaria yopal</p>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Contactenos</a></li>
+                <li><a class="menu-nav" href="#">Inicio</a></li>
+                <li><a class="menu-nav" href="#">Nosotros</a></li>
+                <li><a class="menu-nav" href="#">Servicios</a></li>
+                <li><a class="menu-nav" href="#">Contactenos</a></li>
             </ul>
         </nav>
     </header>
 <!-- Contenido principal -->
     <main>
         <!-- Primera seccion -->
-        <article>
+        <article class="articulo-impar">
             <section>
                 <h1>Titulo principal para anunciar</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti corporis temporibus quis doloremque a id officia. Ad in quam impedit enim nulla illo necessitatibus nisi consequatur, temporibus harum odit tenetur!</p>
