Se terminan los estilos para la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <!-- Barre de navegacion principal -->
     <header>
         <nav>
-            <img class="logo-nav" src="img/Veterinaria.png" alt="logo de la vetrerinaria">
-            <p class="nombre-empresa">Veterinaria yopal</p>
+            <div class="contenedor-logo">
+                <img class="logo-nav" src="img/Veterinaria.png" alt="logo de la vetrerinaria">
+                <p class="nombre-empresa">Veterinaria yopal</p>
+            </div>
             <ul>
                 <li><a class="menu-nav" href="#">Inicio</a></li>
                 <li><a class="menu-nav" href="#">Nosotros</a></li>
