nuevos cambios y pequeñas mejoras

--- a/index.html
+++ b/index.html
@@ -34,12 +34,18 @@
     <main>
         <!-- Primera seccion -->
         <article class="articulo-impar">
-            <section>
-                <h1>Titulo principal para anunciar</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti corporis temporibus quis doloremque a id officia. Ad in quam impedit enim nulla illo necessitatibus nisi consequatur, temporibus harum odit tenetur!</p>
-                <button>Contactenos</button>
-                <button>Solicita un servicio</button>
-                <img src="https://picsum.photos/id/1025/600/400" alt="imagen de perro pug con cobija">
+            <section class="contenedor-seccion">
+                <div class="contenido-izq">
+                    <h1>Titulo principal para anunciar</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti corporis temporibus quis doloremque a id officia. Ad in quam impedit enim nulla illo necessitatibus nisi consequatur, temporibus harum odit tenetur!</p>
+                    <div class="botones">
+                        <button class="boton-primario">Contactenos</button>
+                        <button class="boton-secundario">Solicita un servicio</button>
+                    </div>
+                </div>
+                <div class="contenido-der">
+                    <img src="https://picsum.photos/id/1025/600/400" alt="imagen de perro pug con cobija">
+                </div>
             </section>
         </article>
         <!-- segunda seccion -->
