primer articulo terminado en version desktop

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <article class="articulo-impar">
             <section class="contenedor-seccion">
                 <div class="contenido-izq">
-                    <h1>Titulo principal para anunciar</h1>
+                    <h1>La mejor eleccion que hara sentir segura a tu mascota</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti corporis temporibus quis doloremque a id officia. Ad in quam impedit enim nulla illo necessitatibus nisi consequatur, temporibus harum odit tenetur!</p>
                     <div class="botones">
                         <button class="boton-primario">Contactenos</button>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="contenido-der">
-                    <img src="https://picsum.photos/id/1025/600/400" alt="imagen de perro pug con cobija">
+                    <img src="img/Perro.webp" alt="imagen de perro pug con cobija">
                 </div>
             </section>
         </article>
