estilizando la segunda seccion

--- a/index.html
+++ b/index.html
@@ -49,16 +49,20 @@
             </section>
         </article>
         <!-- segunda seccion -->
-        <article>
-            <section>
-                <h1>Es una veterinaria que ama a los animales</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quae possimus cupiditate temporibus quidem architecto consectetur nobis magni delectus aliquid accusantium deserunt adipisci dignissimos, odit sapiente repudiandae quod perferendis fugiat.</p>
-                <button>Solicita un servicio</button>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ySgCU7z1E_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <article class="articulo-par">
+            <section class="contenedor-seccion">
+                <div class="contenido-izq-par">
+                    <h1>Es una veterinaria que ama a los animales</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quae possimus cupiditate temporibus quidem architecto consectetur nobis magni delectus aliquid accusantium deserunt adipisci dignissimos, odit sapiente repudiandae quod perferendis fugiat.</p>
+                    <button>Solicita un servicio</button>
+                </div>
+                <div class="contenido-der">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ySgCU7z1E_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </section>
         </article>
         <!-- Tercera seccion -->
-        <article>
+        <article class="articulo-impar">
             <section>
                 <h1>Galeria</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae amet, quia excepturi tenetur veniam maxime molestiae, voluptatum ipsa fuga repellendus ut? Error molestiae amet asperiores sit maxime, dolores ratione eos!</p>
