se termina la segunda seccion, donde se agrego un elemento detras de otro

--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
                 <div class="contenido-izq-par">
                     <h1>Es una veterinaria que ama a los animales</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quae possimus cupiditate temporibus quidem architecto consectetur nobis magni delectus aliquid accusantium deserunt adipisci dignissimos, odit sapiente repudiandae quod perferendis fugiat.</p>
-                    <button>Solicita un servicio</button>
+                    <div>
+                        <button class="botones boton-primario-impar">Solicita un servicio</button>
+                    </div>
                 </div>
-                <div class="contenido-der">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ySgCU7z1E_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+                <div class="contenido-der-impar">
+                    <iframe width="550" height="550" src="https://www.youtube.com/embed/ySgCU7z1E_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="cuadrado-decorativo"></div>
+                </div>  
             </section>
         </article>
         <!-- Tercera seccion -->
