Se agregan imagenes relacionadas al diseño de la pagina y se agregan los estilos correspondientes  al tercer articulo

--- a/index.html
+++ b/index.html
@@ -66,24 +66,24 @@
         </article>
         <!-- Tercera seccion -->
         <article class="articulo-impar">
-            <section>
+            <section class="galeria contenedor-seccion">
                 <h1>Galeria</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae amet, quia excepturi tenetur veniam maxime molestiae, voluptatum ipsa fuga repellendus ut? Error molestiae amet asperiores sit maxime, dolores ratione eos!</p>
-                <div class="galeria">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum sequi libero ad?</p>
+                <div class="imagenes">
                     <div class="img1">
-                        <img src="https://picsum.photos/id/237/600/400" alt="perro negro">
+                        <img src="img/medica-perro.webp" alt="veterinaria-acariciando-perro">
                         <h2>veterinarios</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet reiciendis quibusdam odit asperiores sunt provident ea sed laboriosam necessitatibus sapiente, voluptate sint enim autem excepturi ab ut soluta cum molestiae?</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, delectus deserunt.</p>
                     </div>
                     <div class="img2">
-                        <img src="https://picsum.photos/id/1020/600/400" alt="oso en la montaña">
+                        <img src="img/perro-mirando-mano.webp" alt="perro-enfermo-mirando-mano-veterinaria">
                         <h2>Vacunacion</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet reiciendis quibusdam odit asperiores sunt provident ea sed laboriosam necessitatibus sapiente, voluptate sint enim autem excepturi ab ut soluta cum molestiae?</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, delectus deserunt.</p>
                     </div>
                     <div class="img3">
-                        <img src="https://picsum.photos/id/550/600/400" alt="mujer viendo el horizonte">
+                        <img src="img/medica-chequeando-perro.webp" alt="veterinaria-chequeano-perro">
                         <h2>plan dental</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet reiciendis quibusdam odit asperiores sunt provident ea sed laboriosam necessitatibus sapiente, voluptate sint enim autem excepturi ab ut soluta cum molestiae?</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, delectus deserunt.</p>
                     </div>
                 </div>
             </section>
