se agrega el estilo correspondiente a la cuarta seccion

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="imagenes">
                     <div class="img1">
                         <img src="img/medica-perro.webp" alt="veterinaria-acariciando-perro">
-                        <h2>veterinarios</h2>
+                        <h2>Veterinarios</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, delectus deserunt.</p>
                     </div>
                     <div class="img2">
@@ -82,19 +82,24 @@
                     </div>
                     <div class="img3">
                         <img src="img/medica-chequeando-perro.webp" alt="veterinaria-chequeano-perro">
-                        <h2>plan dental</h2>
+                        <h2>Plan Dental</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, delectus deserunt.</p>
                     </div>
                 </div>
             </section>
         </article>
         <!-- cuerta seccion con textos alineados a la izquierda -->
-        <article>
-            <section>
-                <h1>Es una veterinaria que ama a los animales</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quae possimus cupiditate temporibus quidem architecto consectetur nobis magni delectus aliquid accusantium deserunt adipisci dignissimos, odit sapiente repudiandae quod perferendis fugiat.</p>
-                <button>Solicita un servicio</button>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ySgCU7z1E_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <article class="articulo-par">
+            <section class="contenedor-seccion-cuarta">
+                <div class="contenido-der-par">
+                    <h1>Es una veterinaria que ama a los animales</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium veritatis illum, sit eius officia est?</p>
+                    <button class="botones boton boton-primario-impar">Solicita un servicio</button>
+                </div>
+                <div class="contenido-der-impar-4">
+                    <iframe width="550" height="550" src="https://www.youtube.com/embed/ySgCU7z1E_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="cuadrado-decorativo"></div>
+                </div>
             </section>
         </article>
         <!-- quinta seccion -->
