se aplican los estilos correspondientes a la quinta seccion

--- a/index.html
+++ b/index.html
@@ -103,28 +103,34 @@
             </section>
         </article>
         <!-- quinta seccion -->
-        <article>
-            <section>
+        <article class="articulo-impar">
+            <section class="contenedor-seccion galeria">
                 <h1>Precios</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla magni iusto doloribus omnis sit iure repudiandae neque dolorem, adipisci illo dolores libero, quae officia. Fuga sequi totam magnam nihil ab.</p>
-                <div class="precio">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita omnis commodi libero?</p>
+                <div class="imagenes-precios">
                     <div class="img1">
-                        <img src="https://picsum.photos/id/598/600/400" alt="barco en el mar">
-                        <p>$50</p>
-                        <p>$30</p>
-                        <button>Comprar</button>
+                        <img src="img/bulldog-frances.webp" alt="perro-bulldog-frances">
+                        <div class="precios">
+                            <p>$50</p>
+                            <p>$30</p>
+                        </div>
+                        <button class="boton-comprar">Comprar</button>
                     </div>
                     <div class="img2">
-                        <img src="https://picsum.photos/id/642/600/400" alt="velas blancas de un barco">
-                        <p>$40</p>
-                        <p>$25</p>
-                        <button>Comprar</button>
+                        <img src="img/perro-blanco-con-manchas.webp" alt="perro-criollo-blanco">
+                        <div class="precios">
+                            <p>$40</p>
+                            <p>$25</p>
+                        </div>
+                        <button class="boton-comprar">Comprar</button>
                     </div>
                     <div class="img3">
-                        <img src="https://picsum.photos/id/211/600/400" alt="barco de mandera en el muelle">
-                        <p>$45</p>
-                        <p>$20</p>
-                        <button>Comprar</button>
+                        <img src="img/golden-retriber.webp" alt="perro-golden-retriber">
+                        <div class="precios">
+                            <p>$45</p>
+                            <p>$20</p>
+                        </div>
+                        <button class="boton-comprar">Comprar</button>
                     </div>
                 </div>
             </section>
