se termina la sexta seccion, se agregan nuevos iconos de redes sociales, se gregan clases individuales a cada etiqueta img

--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum sequi libero ad?</p>
                 <div class="imagenes">
                     <div class="img1">
-                        <img src="img/medica-perro.webp" alt="veterinaria-acariciando-perro">
+                        <img class="fotos" src="img/medica-perro.webp" alt="veterinaria-acariciando-perro">
                         <h2>Veterinarios</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, delectus deserunt.</p>
                     </div>
                     <div class="img2">
-                        <img src="img/perro-mirando-mano.webp" alt="perro-enfermo-mirando-mano-veterinaria">
+                        <img class="fotos" src="img/perro-mirando-mano.webp" alt="perro-enfermo-mirando-mano-veterinaria">
                         <h2>Vacunacion</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, delectus deserunt.</p>
                     </div>
                     <div class="img3">
-                        <img src="img/medica-chequeando-perro.webp" alt="veterinaria-chequeano-perro">
+                        <img class="fotos" src="img/medica-chequeando-perro.webp" alt="veterinaria-chequeano-perro">
                         <h2>Plan Dental</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, delectus deserunt.</p>
                     </div>
@@ -109,7 +109,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita omnis commodi libero?</p>
                 <div class="imagenes-precios">
                     <div class="img1">
-                        <img src="img/bulldog-frances.webp" alt="perro-bulldog-frances">
+                        <img class="fotos" src="img/bulldog-frances.webp" alt="perro-bulldog-frances">
                         <div class="precios">
                             <p>$50</p>
                             <p>$30</p>
@@ -117,7 +117,7 @@
                         <button class="boton-comprar">Comprar</button>
                     </div>
                     <div class="img2">
-                        <img src="img/perro-blanco-con-manchas.webp" alt="perro-criollo-blanco">
+                        <img class="fotos" src="img/perro-blanco-con-manchas.webp" alt="perro-criollo-blanco">
                         <div class="precios">
                             <p>$40</p>
                             <p>$25</p>
@@ -125,7 +125,7 @@
                         <button class="boton-comprar">Comprar</button>
                     </div>
                     <div class="img3">
-                        <img src="img/golden-retriber.webp" alt="perro-golden-retriber">
+                        <img class="fotos" src="img/golden-retriber.webp" alt="perro-golden-retriber">
                         <div class="precios">
                             <p>$45</p>
                             <p>$20</p>
@@ -136,25 +136,43 @@
             </section>
         </article>
         <!-- sexta seccion -->
-        <article>
-            <section>
+        <article class="articulo-par">
+            <section class="contenedor-seccion equipo">
                 <h1>El equipo veterinario</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quam aperiam voluptatibus harum quibusdam illo asperiores velit saepe corporis numquam, perspiciatis ipsa culpa pariatur. Consectetur ullam reprehenderit nihil voluptas quo?</p>
-                <div class="equipo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum reprehenderit natus nobis!</p>
+                <div class="imagenes-precios">
                     <div class="img1">
-                        <img src="https://picsum.photos/id/548/600/400" alt="mujer en una fogata">
-                        <h2>Jennifer mullen</h2>
-                        <p>Veterinaria</p>
+                        <img src="img/doctora1.webp" alt="mujer en una fogata">
+                        <h3>Jennifer mullen</h3>
+                        <span>Veterinaria</span>
+                        <div class="redes-sociales">
+                            <li class="fondo-icono"><img class="icono" src="img/Instagram.webp" alt=""></li>
+                            <li class="fondo-icono"><img class="icono" src="img/Facebook.webp" alt=""></li>
+                            <li class="fondo-icono"><img class="icono" src="img/Twitter.webp" alt=""></li>
+                            <li class="fondo-icono"><img class="icono" src="img/WhatsApp.webp" alt=""></li>
+                        </div>
                     </div>
                     <div class="img2">
-                        <img src="https://picsum.photos/id/602/600/400" alt="hombre mirando el horizonte">
-                        <h2>Phillip Lham</h2>
-                        <p>Administrador</p>
+                        <img src="img/doctora2.webp" alt="hombre mirando el horizonte">
+                        <h3>Sheeren Collins</h3>
+                        <span>Administrador</span>
+                        <div class="redes-sociales">
+                            <li class="fondo-icono"><img class="icono" src="img/Instagram.webp" alt=""></li>
+                            <li class="fondo-icono"><img class="icono" src="img/Facebook.webp" alt=""></li>
+                            <li class="fondo-icono"><img class="icono" src="img/Twitter.webp" alt=""></li>
+                            <li class="fondo-icono"><img class="icono" src="img/WhatsApp.webp" alt=""></li>
+                        </div>
                     </div>
                     <div class="img3">
-                        <img src="https://picsum.photos/id/633/600/400" alt="mujer sentada en el bosque">
-                        <h2>Veronica Shurman</h2>
-                        <p>Veterinaria</p>
+                        <img src="img/doctora3.webp" alt="mujer sentada en el bosque">
+                        <h3>Veronica Shurman</h3>
+                        <span>Veterinaria</span>
+                        <div class="redes-sociales">
+                            <li class="fondo-icono"><img class="icono" src="img/Instagram.webp" alt=""></li>
+                            <li class="fondo-icono"><img class="icono" src="img/Facebook.webp" alt=""></li>
+                            <li class="fondo-icono"><img class="icono" src="img/Twitter.webp" alt=""></li>
+                            <li class="fondo-icono"><img class="icono" src="img/WhatsApp.webp" alt=""></li>
+                        </div>
                     </div>
                 </div>
             </section>
