terminada la septima seccion que contiene el banner con imagen de fondo y capa de color amarillo.

--- a/index.html
+++ b/index.html
@@ -178,22 +178,22 @@
             </section>
         </article>
         <!-- septima seccion -->
-        <article>
-            <section>
-                <div class="icon1">
-                    <img src="img/cruz-roja.png" alt="Corazon cruz roja">
+        <article class="articulo-par">
+            <section class="contenedor-seccion banner">
+                <div class="contenedor-items">
+                    <img src="img/Icon-heart.webp" alt="Corazon cruz roja">
                     <p>+34793</p>
-                    <h2>Soporte al cliente</h2>
+                    <h2>Clientes Felices</h2>
                 </div>
-                <div class="icon2">
-                    <img src="img/estetoscopio.png" alt="estetoscopio">
+                <div class="contenedor-items">
+                    <img src="img/icon-estetoscopio.webp" alt="estetoscopio">
                     <p>+45382</p>
-                    <h2>Departamento medico</h2>
+                    <h2>Diagnosticos</h2>
                 </div>
-                <div class="icon3">
-                    <img src="img/jeringa.png" alt="jeringa vacunacion">
+                <div class="contenedor-items">
+                    <img src="img/icon-jeringa.webp" alt="jeringa vacunacion">
                     <p>+54762</p>
-                    <h2>Vacunacion</h2>
+                    <h2>Vacunaciones</h2>
                 </div>
             </section>
         </article>
